# RC-AI-Agent

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
iiti_project/: RC_agent.py  RC_agent_frontend.py  rc_state.py  rc_tools.py
pdf_to_markdown_assets/: combined_is_456_1-127.md  is_456_1-20.md  is_456_page_101-120.md  is_456_page_121-127.md  is_456_page_21-40.md  is_456_page_41-60.md  is_456_page_61-80.md  is_456_page_81-100.md
