[project]
name = "iiti-intership-project-slm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ddgs>=9.11.2",
    "duckduckgo-search>=8.1.1",
    "faiss-cpu>=1.11.0",
    "google-genai>=1.33.0",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-openai>=1.1.10",
    "langchain-text-splitters>=0.3.11",
    "langgraph>=1.0.9",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "python-dotenv>=1.2.1",
    "streamlit>=1.54.0",
    "tavily-python>=0.7.23",
]
